--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   "devDependencies": {
     "@jest/types": "^29.6.3",
     "@types/node": "^20.9.0",
-    "@types/requireindex": "^1.2.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@typescript-eslint/rule-tester": "^6.10.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-eslint-plugin": "^5.1.1",
+    "@types/requireindex": "^1.2.4",
+    "@typescript-eslint/parser": "^8.7.0",
+    "@typescript-eslint/rule-tester": "^8.7.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-eslint-plugin": "^6.2.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": "12.x || 14.x || >= 16"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "^4.0.0 || ^5.0.0 || ^6.0.0",
+    "@typescript-eslint/parser": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
     "eslint": "^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0"
   },
   "peerDependenciesMeta": {
